# skill-manager

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  current-focus.md  design.md  frontend-redesign.md  package-lock.json  package.json  phase-plan.md  playwright.config.ts  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
frontend/: index.html
frontend/e2e/: smoke.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
packaging/homebrew/: skill-manager.rb.tmpl
packaging/npm/: package.json
packaging/pyinstaller/: skill-manager.spec
scripts/: build_release.py  ci_validate.sh  dump_openapi.py  install-dev.sh  render_homebrew_formula.py  serve_e2e_fixture.py  serve_marketplace_fixture.py  start-dev.sh  stop-dev.sh  sync_public_metadata.py  sync_version.py  test_backend.sh  validate_homebrew_formula.sh  validate_npm_wrapper.sh  validate_release_artifact.py
skill_manager/: __init__.py  __main__.py  app_paths.py  atomic_files.py  errors.py  launcher.py  paths.py  storage_paths.py
skill_manager/api/: __init__.py  app.py  deps.py  errors.py  runtime.py  schemas.py  server.py
skill_manager/application/: __init__.py  catalog_queries.py  check_queries.py  container.py  invalidation.py  inventory.py  marketplace.py  marketplace_descriptions.py  marketplace_http.py  read_model_service.py  serializers.py  service.py  skills_mutation_service.py  skills_query_service.py  skills_serializers.py  source_fetch_service.py  view_models.py
skill_manager/cli/: main.py
skill_manager/db/: __init__.py  connection.py  migrations.py
skill_manager/domain/: __init__.py  catalog.py  identity.py  observations.py  package.py
skill_manager/harness/: __init__.py  catalog.py  command_runner.py  contracts.py  drivers.py  kernel.py  link_operator.py  managers.py  openclaw.py  path_resolver.py  registry.py  resolution.py  support_store.py
skill_manager/runtime/: __init__.py  assets.py  browser.py  paths.py  process.py  server.py  startup.py  state.py
skill_manager/sources/: __init__.py  github.py  registries.py  types.py
skill_manager/store/: __init__.py  harness_support.py  manifest.py  shared_store.py
tests/: README.md  __init__.py
tests/integration/: test_cli_marketplace_api.py  test_cli_runtime.py  (+11 more)
(+645 files in other folders)
