[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager"
dynamic = ["version"]
description = "Local app and browser UI for universal skill management across agent harnesses."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.34,<0.35",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11,<7",
]

[project.scripts]
skill-manager = "skill_manager.cli:main"

[tool.setuptools.dynamic]
version = { attr = "skill_manager.__version__" }

[tool.setuptools.packages.find]
include = ["skill_manager*"]

[tool.setuptools.package-data]
skill_manager = ["VERSION"]
