[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager"
dynamic = ["version"]
description = "Local app and browser UI for universal skill management across agent harnesses."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.34,<0.35",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11,<7",
]

[project.scripts]
skill-manager = "skill_manager.cli:main"

[project.urls]
Homepage = "https://github.com/mode-io/skill-manager"
Repository = "https://github.com/mode-io/skill-manager"
Issues = "https://github.com/mode-io/skill-manager/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "skill_manager.__version__" }

[tool.setuptools.packages.find]
include = ["skill_manager*"]

[tool.setuptools.package-data]
skill_manager = ["VERSION"]
